Feature/414 416 dao and api (#20)
* Merging functionality 6.2.2 & 6.2.5. done by @ggrg
